--- a/README.Rmd
+++ b/README.Rmd
@@ -51,21 +51,27 @@ wpb_list()
 
 The second function is `wpb_table()`. This function returns a series of variables about the prison systems of the world, of a particular region, or of a specific country. For instance, the code below downloads prison data for Africa:
 
-```{r africa}
+```{r africa, eval = FALSE}
 africa <- wpb_table(region = "Africa")
 names(africa)
+ [1] "country"                 "prison_population_rate"  "prison-population-total"
+ [4] "female-prisoners"        "pre-trial-detainees"     "foreign-prisoners"      
+ [7] "occupancy-level"         "iso_a2"                  "name"                   
+[10] "geometry" 
 ```
 
 The region choices are "Africa", "Asia", "Caribbean", "Central America", "Europe", "Middle East", "North America", "Oceania", "South America" and "All".
 
 `wpb_table()` also provides geometric shapes for maps. For instance, you can download and plot the prison population rate in South America with only three lines of code:
 
-```{r ggpplot-map, warning = FALSE}
+```{r ggpplot-map, eval = FALSE}
 south_america <- wpb_table(region = "South America")
 
 library(ggplot2)
 ggplot(south_america, aes(fill = prison_population_rate)) + geom_sf() + scale_fill_distiller(palette = "YlOrRd", trans = "reverse") + theme_minimal()
 ```
+
+![](http://i.imgur.com/JxO0wCr.png)
 
 Finally, we have added the `wpb_series()` function to the package. The function downloads and tidies the tables describing the trends in the prison population total and the prison population rate for every jurisdiction included in the project. Below is an example taken from [Germany's country profile](http://www.prisonstudies.org/country/germany):
 
@@ -73,14 +79,25 @@ Finally, we have added the `wpb_series()` function to the package. The function 
 
 You can retrieve the same information with the following code:
 
-```{r germany}
+```{r germany, eval = FALSE}
 germany <- wpb_series(country =  "Germany")
 germany
+# A tibble: 8 x 4
+  Country  Year `Prison population total` `Prison population rate`
+    <chr> <dbl>                     <dbl>                    <dbl>
+1 germany  2000                     70252                       85
+2 germany  2002                     70977                       86
+3 germany  2004                     79452                       96
+4 germany  2006                     76629                       93
+5 germany  2008                     72259                       88
+6 germany  2010                     69385                       85
+7 germany  2012                     65889                       82
+8 germany  2014                     61872                       76
 ```
 
 `wpb_series()` can also be combined with `wpb_list()` to make interesting time series graphs. The code below downloads data for all countries then plots the prison population rate for Brazil, Germany, Russia and the United States:
 
-```{r for-loop, warning = FALSE, error = FALSE}
+```{r for-loop, warning = FALSE, error = FALSE, eval = FALSE}
 x <- list()
 countries <- wpb_list()
 for(i in 1:nrow(countries)){
@@ -96,6 +113,8 @@ X <- data.table::rbindlist(x, fill = TRUE) %>%
 
 X %>% dplyr::filter(country_name %in% c("Brazil", "Germany", "Russian Federation", "United States of America")) %>% ggplot(aes(x = Year, y = `Prison population rate`, group = country_name, colour = country_name)) + geom_line() + theme_minimal()
 ```
+
+![](http://i.imgur.com/lIUhO5E.png)
   
 ## Contributions
 
