--- a/README.Rmd
+++ b/README.Rmd
@@ -12,12 +12,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/prisonbrief)](https://cran.r-project.org/package=prisonbrief) ![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/danilofreire/prisonbrief?branch=master&svg=true) [![CRAN_Download_Badge](http://cranlogs.r-pkg.org/badges/prisonbrief)](https://CRAN.R-project.org/package=prisonbrief)
-[![CRAN_Download_Badge](http://cranlogs.r-pkg.org/badges/grand-total/prisonbrief)](https://CRAN.R-project.org/package=prisonbrief)  
+[![DOI](https://zenodo.org/badge/97652568.svg)](https://zenodo.org/badge/latestdoi/97652568) [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/prisonbrief)](https://cran.r-project.org/package=prisonbrief) ![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/danilofreire/prisonbrief?branch=master&svg=true) [![CRAN_Download_Badge](http://cranlogs.r-pkg.org/badges/prisonbrief)](https://CRAN.R-project.org/package=prisonbrief) [![CRAN_Download_Badge](http://cranlogs.r-pkg.org/badges/grand-total/prisonbrief)](https://CRAN.R-project.org/package=prisonbrief)  
 
 # prisonbrief: An R package that returns tidy data from the World Prison Brief website
 
-The goal of `prisonbrief` is to download, clean and return data from the [World Prison Brief website](http://www.prisonstudies.org/). The World Prison Brief is an online database compiled by the [Institute for Criminal Policy Research](http://www.icpr.org.uk/) with information on prison systems around the world. Data currently cover 223 jurisdictions and have been collected from public sources. The `prisonbrief` package provides easy-to-use functions to convert the World Prison Brief database into a format convenient for statistical analysis.
+The goal of `prisonbrief` is to download, clean and return data from the [World Prison Brief website](http://www.prisonstudies.org/). The World Prison Brief is an online database compiled by the [Institute for Criminal Policy Research](http://www.icpr.org.uk/) with information on prison systems around the world. Data currently cover 223 jurisdictions and have been collected from public sources. The `prisonbrief` package provides easy-to-use functions to convert WPB data into a format convenient for statistical analysis.
 
 ## Installation
 
@@ -42,7 +41,7 @@ devtools::install_github("danilofreire/prisonbrief")
 
 ## Usage
 
-`prisonbrief` is quite simple to use. The package contains only three functions, all of them starting with `wpb`, the acronym for World Prison Brief.
+`prisonbrief` is quite simple to use. The package contains only three functions, all of them starting with `wpb`, an acronym for World Prison Brief.
 
 The first is a convenience function named `wpb_list()`. It prints a list of available countries to the console. 
 
@@ -118,11 +117,11 @@ X %>% dplyr::filter(country_name %in% c("Brazil",
   
 ## Contributions
 
-`prisonbrief` was written by [Danilo Freire](http://danilofreire.com/) and [Robert Myles McDonnell](https://robertmyles.github.io/). Feedback and comments are welcome. If you have any suggestions on how to improve the package feel free to [open an issue on GitHub](https://github.com/danilofreire/prisonbrief/issues).
+`prisonbrief` was written by [Danilo Freire](http://danilofreire.com/) and [Robert Myles McDonnell](https://robertmyles.github.io/). Feedback and comments are most welcome. If you have any suggestions on how to improve this package feel free to [open an issue on GitHub](https://github.com/danilofreire/prisonbrief/issues).
 
 ## Citation
 
-If you use the `prisonbrief` package, you can cite it with:
+You can cite the `prisonbrief` package with:
 
 ```{r citation}
 citation("prisonbrief")
