--- a/README.Rmd
+++ b/README.Rmd
@@ -124,7 +124,7 @@ X %>% dplyr::filter(country_name %in% c("Brazil",
 
 ## Contributions
 
-`prisonbrief` was written by [Danilo Freire](http://danilofreire.com/) and [Robert Myles McDonnell](https://robertmyles.github.io/). Feedback and comments are most welcome. If you have any suggestions on how to improve this package feel free to [open an issue on GitHub](https://github.com/danilofreire/prisonbrief/issues).
+`prisonbrief` was written by [Danilo Freire](http://danilofreire.github.io/) and [Robert Myles McDonnell](https://www.robertmylesmcdonnell.com/). Feedback and comments are most welcome. If you have any suggestions on how to improve this package feel free to [open an issue on GitHub](https://github.com/danilofreire/prisonbrief/issues).
 
 ## Citation
 
